k8s/mediaserver/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: mediaserver
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tv
              name: tvshows
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          nfs:
            server: 192.168.100.61
            path: /mnt/fast-pool1/docker-configs/sonarr
        - name: tvshows
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/tv-shows
        - name: downloads
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/torrent/downloads
