k8s/mediaserver/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: mediaserver
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.236
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
