k8s/mediaserver/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: mediaserver
spec:
  rules:
    - host: "sonarr.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarr-service
                port:
                  number: 8989
